--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ AC_PREREQ(2.57)
 AC_DIVERT_BEFORE_HELP([
 BSE_MAJOR_VERSION=0
 BSE_MINOR_VERSION=6
-BSE_MICRO_VERSION=6
+BSE_MICRO_VERSION=7
 BSE_INTERFACE_AGE=0
 BSE_BINARY_AGE=0
 ])
@@ -643,6 +643,7 @@ tests/latency/Makefile
 tests/scripts/Makefile
 tests/bse/Makefile
 test/Makefile
+web/Makefile
 ])
 
 AC_OUTPUT
