propagate PLUGIN_FLAGS, FPU_FLAGS and SSE_FLAGS from configure.in to the
Sat Apr 15 03:29:35 2006  Tim Janik  <timj@gtk.org>

        * Makefile.am: propagate PLUGIN_FLAGS, FPU_FLAGS and SSE_FLAGS from
        configure.in to the various plugin types.

        * plugins/Makefile.plugins: updates.

svn path=/trunk/; revision=3605

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -61,16 +61,19 @@ CLEANFILES 		 += $(plugins_built_sources)
 plugin_FPU_ltlibs	  =	# listed in Makefile.plugins
 plugin_FPU_LTLIBRARIES	  = $(plugin_FPU_ltlibs)
 plugin_FPUdir 	  	  = $(bseplugindir)
+FPU_PLUGIN_CFLAGS	  = $(AM_CFLAGS) $(PLUGIN_FLAGS) $(FPU_FLAGS)
+FPU_PLUGIN_CXXFLAGS	  = $(AM_CXXFLAGS) $(PLUGIN_FLAGS) $(FPU_FLAGS)
 # .SSE plugins
 plugin_SSE_ltlibs	  =	# listed in Makefile.plugins
 plugin_SSE_LTLIBRARIES	  = $(plugin_SSE_cond_libs)
 plugin_SSEdir		  = $(bseplugindir)
+SSE_PLUGIN_CFLAGS	  = $(AM_CFLAGS) $(PLUGIN_FLAGS) $(SSE_FLAGS)
+SSE_PLUGIN_CXXFLAGS	  = $(AM_CXXFLAGS) $(PLUGIN_FLAGS) $(SSE_FLAGS)
 if WITH_SSE_FLAGS
 plugin_SSE_cond_libs	  = $(plugin_SSE_ltlibs)
 else
 plugin_SSE_cond_libs	  =
 endif
-
 
 # === Makefile.plugins adds plugin rules ===
 include Makefile.plugins
@@ -82,7 +85,7 @@ include Makefile.plugins
 ##bsefoo_FPU_la_SOURCES  = bsefoo.cc
 ##bsefoo_FPU_la_LDFLAGS  = -module $(plugins_ldflags)
 ##bsefoo_FPU_la_LIBADD   = $(plugins_libs)
-##bsefoo_FPU_la_CXXFLAGS = $(AM_CXXFLAGS)
+##bsefoo_FPU_la_CXXFLAGS = $(FPU_PLUGIN_CXXFLAGS)
 .PHONY: refresh-Makefile.plugins
 refresh-Makefile.plugins: Makefile.am Makefile.in Makefile
 	echo									 >xgen-$(@F)
@@ -96,12 +99,12 @@ refresh-Makefile.plugins: Makefile.am Makefile.in Makefile
 	  echo "$$_name"'_FPU_la_SOURCES = '"$$name.cc"				>>xgen-$(@F)	;\
 	  echo "$$_name"'_FPU_la_LDFLAGS = -module $$(plugins_ldflags)'		>>xgen-$(@F)	;\
 	  echo "$$_name"'_FPU_la_LIBADD  = $$(plugins_libs)'			>>xgen-$(@F)	;\
-	  echo "$$_name"'_FPU_la_CXXFLAGS  = $$(AM_CXXFLAGS)'			>>xgen-$(@F)	;\
+	  echo "$$_name"'_FPU_la_CXXFLAGS  = $$(FPU_PLUGIN_CXXFLAGS)'		>>xgen-$(@F)	;\
 	  echo "plugin_SSE_ltlibs      += $$name.SSE.la"			>>xgen-$(@F)	;\
 	  echo "$$_name"'_SSE_la_SOURCES   = $$('"$$_name"'_FPU_la_SOURCES)'	>>xgen-$(@F)	;\
 	  echo "$$_name"'_SSE_la_LDFLAGS   = $$('"$$_name"'_FPU_la_LDFLAGS)'	>>xgen-$(@F)	;\
 	  echo "$$_name"'_SSE_la_LIBADD    = $$('"$$_name"'_FPU_la_LIBADD)'	>>xgen-$(@F)	;\
-	  echo "$$_name"'_SSE_la_CXXFLAGS  = $$(AM_CXXFLAGS) $$(SSE_FLAGS)'	>>xgen-$(@F)	;\
+	  echo "$$_name"'_SSE_la_CXXFLAGS  = $$(SSE_PLUGIN_CXXFLAGS)'		>>xgen-$(@F)	;\
 	done
 	: # generate C plugin rules
 	for wcfile in $(filter %.c, $(wildcard $(PLUGIN_CFILES))) ; do				 \
@@ -109,14 +112,10 @@ refresh-Makefile.plugins: Makefile.am Makefile.in Makefile
 	  _name=`echo $$name | sed 's/[^A-Za-z0-9]/_/g' `					;\
 	  cfile="$$name.c"									;\
 	  hfile="$$name.h"									;\
-	  test -e "$$cfile" || {								 \
-	    echo "$$cfile: No such file" >&2							;\
-	    exit 1										;\
-	  }											;\
-	  grep -qE "BSE_EXPORTS_BEGIN|BSE_DEFINE_EXPORTS" $$cfile || {				 \
-	    echo "$$cfile: missing BSE_DEFINE_EXPORTS() directive" >&2				;\
-	    exit 1										;\
-	  }											;\
+	  test -e "$$cfile" || 									 \
+	    { echo "$$cfile: No such file" >&2 ; exit 1 ; } 					;\
+	  grep -qE "BSE_EXPORTS_BEGIN|BSE_DEFINE_EXPORTS" $$cfile ||  				 \
+	    { echo "$$cfile: missing BSE_DEFINE_EXPORTS() directive" >&2 ; exit 1 ; }		;\
 	  echo									>>xgen-$(@F)	;\
 	  echo -e "\n## C Plugin $$name"					>>xgen-$(@F) 	;\
 	  test -e "$$hfile" && {								 \
@@ -127,14 +126,14 @@ refresh-Makefile.plugins: Makefile.am Makefile.in Makefile
 	  echo "$$_name"'_FPU_la_SOURCES = '"$$cfile"				>>xgen-$(@F)	;\
 	  echo "$$_name"'_FPU_la_LDFLAGS = -module $$(plugins_ldflags)'		>>xgen-$(@F)	;\
 	  echo "$$_name"'_FPU_la_LIBADD  = $$(plugins_libs)'			>>xgen-$(@F)	;\
-	  echo "$$_name"'_FPU_la_CFLAGS    = $$(AM_CFLAGS)'			>>xgen-$(@F)	;\
+	  echo "$$_name"'_FPU_la_CFLAGS    = $$(FPU_PLUGIN_CFLAGS)'		>>xgen-$(@F)	;\
 	  echo "plugin_SSE_ltlibs   += $$name.SSE.la"				>>xgen-$(@F)	;\
 	  echo "$$_name"'_SSE_la_SOURCES   = $$('"$$_name"'_FPU_la_SOURCES)'	>>xgen-$(@F)	;\
 	  echo "$$_name"'_SSE_la_LDFLAGS   = $$('"$$_name"'_FPU_la_LDFLAGS)'	>>xgen-$(@F)	;\
 	  echo "$$_name"'_SSE_la_LIBADD    = $$('"$$_name"'_FPU_la_LIBADD)'	>>xgen-$(@F)	;\
-	  echo "$$_name"'_SSE_la_CFLAGS    = $$(AM_CFLAGS) $$(SSE_FLAGS)'	>>xgen-$(@F)	;\
+	  echo "$$_name"'_SSE_la_CFLAGS    = $$(SSE_PLUGIN_CFLAGS)'		>>xgen-$(@F)	;\
 	done
 	: # move Makefile.plugins in place
 	cp xgen-$(@F) Makefile.plugins
 	rm -f xgen-$(@F)
-# $ echo >Makefile.plugins && make refresh-Makefile.plugins
+# $ echo >Makefile.plugins && make refresh-Makefile.plugins && make Makefile
