don't add @PERLRULE@ to CLEANFILES, as this can cause its contents to be
Wed Apr 19 02:41:55 2006  Tim Janik  <timj@gtk.org>

        * Makefile.am:
        (CLEANFILES): don't add @PERLRULE@ to CLEANFILES, as this can cause
        its contents to be partially commented out. instead, add
        $(bse_proc_gen_sources) conditionally to MAINTAINERCLEANFILES
        or CLEANFILES, depending on the AM conditional WITH_PERLRULE.

svn path=/trunk/; revision=3615

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -169,7 +169,11 @@ SFIDL_INC = --nostdinc -I$(top_srcdir) -I$(top_builddir)
 #
 %.genprc.c: @PERLRULE@ %.proc mkcproc.pl
 	$(srcdir)/mkcproc.pl --funcname $@ --preprocess $< >$@
-CLEANFILES += @PERLRULE@ $(bse_proc_gen_sources)
+if WITH_PERLRULE
+CLEANFILES += $(bse_proc_gen_sources)
+else
+MAINTAINERCLEANFILES += $(bse_proc_gen_sources)
+endif
 # gslfft.c
 GENERATED += gslfft.c
 $(srcdir)/gslfft.c: @PERLRULE@ $(srcdir)/gsl-fftgen.pl $(srcdir)/gsl-fftconf.sh
