--- a/beast-gtk/gxk/.cvsignore
+++ b/beast-gtk/gxk/.cvsignore
@@ -1,12 +1,11 @@
-*.lo
-.deps
-_libs
-.libs
-Makefile
 Makefile.in
+Makefile
+*.o
+.deps
+.libs
+stamp-gxkgentypes.h
 gxkgentypes.c
 gxkgentypes.h
-gxkgentypes.stamp
 gxkmarshal.c
 gxkmarshal.h
 gxktest
